storePreference doc
